--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p class="tiny">
       This is a cool stylesheet.
     </p>
-    <button class="btn btn-default btn-dark" onclick="toggleTheme()">Switch Theme</button>
+    <button class="btn btn-default btn-dark ripple" onclick="toggleTheme()">Switch Theme</button>
   </div>
   <script src="script.js"></script>
 </body>
