--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IHUI</title>
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
   <style>
     h1.hero {
       text-transform: uppercase;
