--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IHUI</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="dist/styles.css" />
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
   <style>
     .med-logo-img>img {
@@ -15,7 +15,7 @@
 <body class="dark">
   <div class="center">
     <div class="med-logo-img">
-      <img src="./icon.png" width="160" height="160" />
+      <img src="../icon.png" width="160" height="160" />
     </div>
     <h1 class="hero">Welcome</h1>
     <h2>Welcome to This Random Theme</h2>
@@ -28,7 +28,7 @@
     </p>
     <button class="btn btn-default btn-dark ripple" onclick="toggleTheme()">Switch Theme</button>
   </div>
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
