--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IHUI</title>
-  <link rel="stylesheet" href="dist/styles.css" />
+  <link rel="stylesheet" href="../dist/ihui.css" />
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
   <style>
     .med-logo-img>img {
