--- a/example/index.html
+++ b/example/index.html
@@ -18,7 +18,7 @@
       <img src="../icon.png" width="160" height="160" />
     </div>
     <h1 class="hero">Welcome</h1>
-    <h2>Welcome to This Random Theme</h2>
+    <h2>Welcome to IHUI</h2>
     <p>
       This is the default landing page for <b>This Random Theme</b>.
       It's arbitrarily named <b>IHUI</b>.
