tweak color switch settings

--- a/example/index.html
+++ b/example/index.html
@@ -26,7 +26,8 @@
     <p class="tiny">
       This is a cool stylesheet.
     </p>
-    <button class="btn btn-default btn-dark ripple" onclick="toggleTheme()">Switch Theme</button>
+    <a class="btn btn-default btn-dark ripple" onclick="toggleTheme()">Switch Theme</a>
+    <a class="btn btn-default btn-light ripple" href="elements.html">Elements</a>
   </div>
   <script src="./script.js"></script>
 </body>
