update elements page

--- a/example/elements.html
+++ b/example/elements.html
@@ -9,23 +9,31 @@
     .med-logo-img>img {
       border-radius: 14px;
     }
+    .container {
+      max-width: 74rem;
+    }
+    body {
+      margin-top: 2%;
+    }
   </style>
 </head>
 
-<body class="dark">
+<body class="light">
 
-  <section class="intro">
-    <div class="center">
-      <div class="med-logo-img">
-        <img src="../icon.png" width="160" height="160" />
+  <div class="container">
+    <section class="intro container">
+      <div class="center">
+        <h1 class="big hero">IHUI</h1>
+        <h2>Elements</h2>
       </div>
-      <h1 class="hero">IHUI</h1>
-      <h2>Elements</h2>
-    </div>
-  </section>
+    </section>
 
-  <section class="main-content">
-  </section>
+    <section class="main-content container">
+      <div class="row">
+      <h3>Buttons</h3>
+      </div>
+    </section>
+  </div>
 
 </body>
 
