--- a/example/index.html
+++ b/example/index.html
@@ -1,11 +1,24 @@
 <html>
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>IHUI</title>
   <link rel="stylesheet" href="../dist/ihui.css" />
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
   <style>
+    body {
+      margin-top: 10%;
+    }
+
+
+    .padLeft {
+      margin: 20px;
+    }
+
+    .small-logo-img>img {
+      border-radius: 8px;
+    }
+
     .med-logo-img>img {
       border-radius: 14px;
     }
@@ -18,10 +31,9 @@
       <img src="../icon.png" width="160" height="160" />
     </div>
     <h1 class="hero">Welcome</h1>
-    <h2>Welcome to IHUI</h2>
+    <h3>Welcome to IHUI</h3>
     <p>
-      This is the default landing page for <b>This Random Theme</b>.
-      It's arbitrarily named <b>IHUI</b>.
+      This is the default landing page for <b>This Random Theme</b>. It's arbitrarily named <b>IHUI</b>.
     </p>
     <p class="tiny">
       This is a cool stylesheet.
