tweak ripple button layout

--- a/example/elements.html
+++ b/example/elements.html
@@ -9,9 +9,11 @@
     .med-logo-img>img {
       border-radius: 14px;
     }
+
     .container {
       max-width: 74rem;
     }
+
     body {
       margin-top: 2%;
     }
@@ -29,8 +31,13 @@
     </section>
 
     <section class="main-content container">
-      <div class="row">
-      <h3>Buttons</h3>
+      <div>
+        <h3>Buttons</h3>
+        <p>
+          <a class="btn btn-default">Default</a>
+          <a class="btn btn-default btn-light">Light</a>
+          <a class="btn btn-default btn-light ripple">Light Ripple</a>
+        </p>
       </div>
     </section>
   </div>
