add button demos

--- a/example/elements.html
+++ b/example/elements.html
@@ -36,7 +36,12 @@
         <p>
           <a class="btn btn-default">Default</a>
           <a class="btn btn-default btn-light">Light</a>
+          <a class="btn btn-default btn-dark">Dark</a>
+        </p>
+        <p>
+          <a class="btn btn-default ripple">Default Ripple</a>
           <a class="btn btn-default btn-light ripple">Light Ripple</a>
+          <a class="btn btn-default btn-dark ripple">Dark Ripple</a>
         </p>
       </div>
     </section>
