add typography samples

--- a/example/elements.html
+++ b/example/elements.html
@@ -17,6 +17,10 @@
     body {
       margin-top: 2%;
     }
+
+    section.container {
+      margin-bottom: 4%;
+    }
   </style>
 </head>
 
@@ -31,18 +35,72 @@
     </section>
 
     <section class="main-content container">
-      <div>
-        <h3>Buttons</h3>
-        <p>
-          <a class="btn btn-default">Default</a>
-          <a class="btn btn-default btn-light">Light</a>
-          <a class="btn btn-default btn-dark">Dark</a>
-        </p>
-        <p>
-          <a class="btn btn-default ripple">Default Ripple</a>
-          <a class="btn btn-default btn-light ripple">Light Ripple</a>
-          <a class="btn btn-default btn-dark ripple">Dark Ripple</a>
-        </p>
+      <h3>Buttons</h3>
+      <div class="row">
+        <div class="column six columns">
+          <p>
+            <a class="btn btn-default">Default</a>
+            <a class="btn btn-default btn-light">Light</a>
+            <a class="btn btn-default btn-dark">Dark</a>
+          </p>
+        </div>
+        <div class="column six columns">
+          <p>
+            <a class="btn btn-default ripple">Default Ripple</a>
+            <a class="btn btn-default btn-light ripple">Light Ripple</a>
+            <a class="btn btn-default btn-dark ripple">Dark Ripple</a>
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="main-content container">
+      <h3>Typography</h3>
+      <div class="row">
+        <div class="column four columns">
+          <h1>Heading 1</h1>
+
+          <h2>Heading 2</h2>
+
+          <h3>Heading 3</h3>
+          <h4>Heading 4</h4>
+          <h5>Heading 5</h5>
+          <h6>Heading 6</h6>
+
+          <p class="lead">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+        </div>
+        <div class="column four columns">
+          <h2>Example body text</h2>
+
+          <p>Nullam quis risus eget
+            <a href="javascript:void(0)">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis dis parturient
+            montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.
+          </p>
+
+          <p>
+            <small>This line of text is meant to be treated as fine print.</small>
+          </p>
+          <p>The following snippet of text is <strong>rendered as bold text</strong>.</p>
+
+          <p>The following snippet of text is <em>rendered as italicized text</em>.</p>
+
+          <p>An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>.</p>
+        </div>
+        <div class="column four columns">
+          <h2>Emphasis classes</h2>
+
+          <p class="text-muted">Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
+
+          <p class="text-primary">Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+
+          <p class="text-warning">Etiam porta sem malesuada magna mollis euismod.</p>
+
+          <p class="text-danger">Donec ullamcorper nulla non metus auctor fringilla.</p>
+
+          <p class="text-success">Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
+
+          <p class="text-info">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+        </div>
       </div>
     </section>
   </div>
