more font support

--- a/example/elements.html
+++ b/example/elements.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>IHUI - Elements</title>
   <link rel="stylesheet" href="../dist/ihui.css" />
-  <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Muli:300,400,600,700" rel="stylesheet">
   <style>
     .med-logo-img>img {
       border-radius: 14px;
@@ -26,7 +26,6 @@
     <section class="intro container">
       <div class="center">
         <h1 class="big hero">IHUI</h1>
-        <h2>Elements</h2>
       </div>
     </section>
 
