--- a/example/elements.html
+++ b/example/elements.html
@@ -30,6 +30,22 @@
     </section>
 
     <section class="main-content container">
+      <h3>Navbar</h3>
+      <div class="row">
+        <div class="column twelve columns">
+          <nav class="navbar">
+            <ul class="nav-content">
+              <li class="nav-item ripple nav-brand"><a>Brand</a></li>
+              <li class="nav-item ripple active"><a>Home</a></li>
+              <li class="nav-item ripple"><a>About</a></li>
+              <li class="nav-item ripple"><a>Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </section>
+
+    <section class="main-content container">
       <h3>Buttons</h3>
       <div class="row">
         <div class="column six columns">
