add nav to docs

--- a/example/elements.html
+++ b/example/elements.html
@@ -10,7 +10,7 @@
       border-radius: 14px;
     }
 
-    body {
+    section.intro {
       margin-top: 2%;
     }
 
@@ -21,6 +21,14 @@
 </head>
 
 <body class="light">
+
+  <nav class="navbar">
+    <ul class="nav-content">
+      <li class="nav-item ripple nav-brand"><a>IHUI</a></li>
+      <li class="nav-item"><a href="./index.html">Home</a></li>
+      <li class="nav-item ripple active"><a href="#">Elements</a></li>
+    </ul>
+  </nav>
 
   <div class="container">
     <section class="intro container">
