--- a/example/index.html
+++ b/example/index.html
@@ -25,7 +25,7 @@
   </style>
 </head>
 
-<body class="dark">
+<body class="ihui-dark">
   <div class="center">
     <div class="med-logo-img">
       <img src="../icon.png" width="160" height="160" />
