update button elements

--- a/example/elements.html
+++ b/example/elements.html
@@ -59,15 +59,15 @@
         <div class="column six columns">
           <p>
             <a class="btn btn-default">Default</a>
-            <a class="btn btn-default btn-light">Light</a>
-            <a class="btn btn-default btn-dark">Dark</a>
+            <a class="btn btn-default btn-theme ihui-light">Light</a>
+            <a class="btn btn-default  btn-theme ihui-dark">Dark</a>
           </p>
         </div>
         <div class="column six columns">
           <p>
             <a class="btn btn-default ripple">Default Ripple</a>
-            <a class="btn btn-default btn-light ripple">Light Ripple</a>
-            <a class="btn btn-default btn-dark ripple">Dark Ripple</a>
+            <a class="btn btn-default btn-theme ihui-light ripple">Light Ripple</a>
+            <a class="btn btn-default btn-theme ihui-dark ripple">Dark Ripple</a>
           </p>
         </div>
       </div>
