allow toggling theme on elements page

--- a/example/index.html
+++ b/example/index.html
@@ -41,12 +41,7 @@
     <a class="btn btn-default btn-theme ihui-dark ripple" onclick="toggleTheme()">Switch Theme</a>
     <a class="btn btn-default ripple" href="elements.html">Elements</a>
   </div>
-  <script>
-    function toggleTheme() {
-      window.document.body.classList.toggle('ihui-dark')
-      window.document.body.classList.toggle('ihui-light')
-    }
-  </script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
