--- a/example/elements.html
+++ b/example/elements.html
@@ -27,6 +27,7 @@
       <li class="nav-item ripple nav-brand"><a>IHUI</a></li>
       <li class="nav-item"><a href="./index.html">Home</a></li>
       <li class="nav-item ripple active"><a href="#">Elements</a></li>
+      <li class="nav-item ripple"><a href="#" onclick="toggleTheme()">Toggle Theme</a></li>
     </ul>
   </nav>
 
@@ -124,6 +125,7 @@
     </section>
   </div>
 
+  <script src="./script.js"></script>
 </body>
 
 </html>
